Add updated db urls

--- a/events-ms/src/main/resources/application.properties
+++ b/events-ms/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url = jdbc:postgresql://database-events.cwavjp4capzr.us-east-1.rds.amazonaws.com:5432/events
+spring.datasource.url = jdbc:postgresql://events-database.cs7whdyujxfu.us-east-1.rds.amazonaws.com:5432/events
 spring.datasource.username = postgres
-spring.datasource.password = csds383wow
+spring.datasource.password = csds383events
 server.port = 8080
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
