--- a/participants-ms/src/main/resources/application.properties
+++ b/participants-ms/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url= jdbc:postgresql://database-participants.cwavjp4capzr.us-east-1.rds.amazonaws.com:5432/participants
+spring.datasource.url= jdbc:postgresql://participants-database.cggfloer1fa4.us-east-1.rds.amazonaws.com:5432/participants
 spring.datasource.username= postgres
-spring.datasource.password= csds383wow
+spring.datasource.password= csds383participants
 server.port=8081
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
