Add event producer functionality

--- a/event-producer/src/main/resources/application.properties
+++ b/event-producer/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
-USERNAME=TODO
-PASSWORD=TODO
-VIRTUAL_HOST=TODO
-HOST=TODO
-PORT=TODO
+HOST=localhost
+USERNAME=guest
+PASSWORD=guest
+QUEUE_NAME=hello
